kubernetes/bundle/backstage/bs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
    - port: 80
      targetPort: 7000
      name: frontend
    - port: 7007
      targetPort: 7007
      name: backend
