kubernetes/bundle/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    projectcontour.io/tls-cert-namespace: projectcontour
  name: backstage-frontend
  namespace: backstage
spec:
  rules:
    - host: backstage.apps.cluster-eu.spring-staging.academy
      http:
        paths:
          - backend:
              service:
                name: backstage
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - backstage.apps.cluster-eu.spring-staging.academy
      secretName: wildcard
